[package]
name = "solana-node"
version = "0.1.0"
edition = "2021"

[dependencies]
# Solana SDK and client libraries
solana-sdk = "1.17"
solana-client = "1.17"
solana-transaction-status = "1.17"
solana-gossip = "1.17"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Networking
quinn = "0.10"  # QUIC protocol (used by Solana)
bincode = "1.3"  # Binary serialization

# Storage
rocksdb = "0.21"  # High-performance embedded database
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging and monitoring
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
toml = "0.8"
clap = { version = "4.4", features = ["derive"] }
